# flask-ipernity

./: .flake8  .gitignore  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: Makefile  api_cache.rst  api_callback.rst  api_conf.rst  api_core.rst  api_login.rst  conf.py  index.rst  intro.rst  links.inc  usage.rst
src/flask_ipernity/: __init__.py  cache.py  callback.py  ext.py  login.py  proxy.py
tests/: README  conftest.py  test_00_no_flask_login.py  test_00_no_login_no_cache.py  test_01_login.py  test_02_cache.py  test_auth.py  test_proxy.py
